--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
                     <br />
                     MIHTool's weinre server is might not cover your location, which is mean you might have network issue with Web Inspector in Action Extension.
                     But if you open your web page in MIHTool, and switch to another weinre server for the one in App, you can do this with MIHTool Remote control(With HTTP Server).
+                    <br/>
+                    Web pages that enable <a href="https://w3c.github.io/webappsec-csp/" class="re-link">Content Security Policy</a> will break Web Inspector.
                   </div>
                 </section>
               </p>
@@ -220,6 +222,8 @@
                     <br />
                     MIHTool's weinre server is might not cover your location, which is mean you might have network issue with Web Inspector.
                     But this can be solve by switch to another weinre server, you can do this with MIHTool Remote control(With HTTP Server).
+                    <br/>
+                    Web pages that enable <a href="https://w3c.github.io/webappsec-csp/" class="re-link">Content Security Policy</a> will break Web Inspector.
                   </div>
                 </section>
               </p>
@@ -237,6 +241,8 @@
                     <br />
                     MIHTool's weinre server is might not cover your location, which is mean you might have network issue with Web Inspector.
                     But this can be solve by switch to another weinre server, you can do this with MIHTool Remote control(With HTTP Server).
+                    <br/>
+                    Web pages that enable <a href="https://w3c.github.io/webappsec-csp/" class="re-link">Content Security Policy</a> will break Web Inspector.
                   </div>
                   <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/8.jpeg">
@@ -421,6 +427,8 @@
                     Web inspector 是基于 <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a> 的,bug 可以报到 <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a> 上。
                     <br/>
                     MIHTool 的 weinre 服务可能在你所在的地方有延迟，你用扩展的 Web Inspector 体验可能很差，如果你用 MIHTool 里的 Web Inspector 你可以用 MIHTool 的远程控制的 HTTP 服务器切花自己的 weinre 服务，能得到更好的体验。
+                    <br/>
+                    配置了 <a href="https://w3c.github.io/webappsec-csp/" class="re-link">Content Security Policy</a> 将无法使用 Web Inspector.
                   </div>
                 </section>
 					  	</p>
@@ -442,6 +450,8 @@
                     Web inspector 是基于 <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a> 的,bug 可以报到 <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a> 上。
                     <br/>
                     MIHTool 的 weinre 服务可能在你所在的地方有延迟，你用 Web Inspector 体验可能很差，你可以用 MIHTool 的远程控制的HTTP服务器切花自己的 weinre 服务。
+                    <br/>
+                    配置了 <a href="https://w3c.github.io/webappsec-csp/" class="re-link">Content Security Policy</a> 将无法使用 Web Inspector.
                   </div>
                 </section>
 					  	</p>
@@ -458,6 +468,8 @@
                     Web inspector 是基于 <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a> 的,bug 可以报到 <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a> 上。
                     <br/>
                     MIHTool 的 weinre 服务可能在你所在的地方有延迟，你用 Web Inspector 体验可能很差，你可以用 MIHTool 的远程控制的HTTP服务器切花自己的 weinre 服务。
+                    <br/>
+                    配置了 <a href="https://w3c.github.io/webappsec-csp/" class="re-link">Content Security Policy</a> 将无法使用 Web Inspector.
                   </div>
                   <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/8.jpeg">
