added iPhone note

--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
 					  </div>
 					  <div class="tab-pane fade" id="features_iphone">
 						  <h2 class="bs-callout bs-callout-info">MIHTool helps Front-End Engineers to debug and optimize their webpages on iPad and iPhone</h2>
+              <p>Note: The feature functionality of iPhone version are the same as the iPad version, see also the iPad version for the details.</p>
               <p>1.Action Extension for Safari, brings remote Web Inspector to debug your webpages in Safari.</p>
               <p>2.Web inspector remote(weinre):remote to debug and optimize your mobile webpages on your computer(window,mac,linux with chrome).</p>
               <p>3.Online Web Inspector.</p>
@@ -609,6 +610,7 @@
 					  </div>
 					  <div class="tab-pane fade" id="features_iphone_zh">
 					  	<h2 class="bs-callout bs-callout-info">MIHTool 是前端工程师在iOS设备上调试和优化页面的得力助手.</h2>
+					  	<p>注: iPhone 版有的功能 iPad 版都有，请参看 iPad 版的详细描述.</p>
 					  	<p>1.iOS Safari 扩展, 支持在线远程打开 Web Inspector 调试 Safari 里打开或其他 App 里打开的页面.</p>
 					  	<p>2.远程打开Web inspector调试:在电脑(window,mac,linux,仅需有chrome)上远程调试手机里的页面.</p>
               <p>3.在线远程打开Web Inspector调试.</p>
