--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			</div><!-- /row -->
 			<div class="row subtitle-row">
 				<img src="images/mih/screenshots/qr-150x150.png" width="100" style="margin-bottom: 20px;"/>
-				<div class="col-12 font-thin" style="font-size: 26px;">MIHTool is free! If you love MIHTool and like to help me to make MIHTool better, I'll appreciate you could <a class="re-link" href="https://itunes.apple.com/us/app/mihtool-web-debugger-pro-fee/id599482707?ls=1&amp;mt=8">install the Pro one</a>!</div>
+				<div class="col-12 font-thin" style="font-size: 26px;">MIHTool is free! If you love MIHTool and like to help me to make it better, I'll appreciate you could <a class="re-link" href="https://itunes.apple.com/us/app/mihtool-web-debugger-pro-fee/id599482707?ls=1&amp;mt=8">install the Pro one</a>! Both are the same!</div>
 			</div><!-- /row -->
 			<div class="row content-row" style="padding-top: 25px;">
 				<div class="col-12 col-lg-3 col-sm-6" style="padding-left: 0;">
