--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
   <link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css?20170514-01">
+	<link rel="stylesheet" type="text/css" href="css/style.css?20170527-01">
 	<link rel="prefetch" href="images/zoom.png">
 	<link rel="prefetch" href="images/bg1.jpg">
 	<link rel="prefetch" href="images/bg2.jpg">
@@ -93,13 +93,7 @@
 				<div class="col-12 col-sm-3"><div class="home-hover navigation-slide" data-slide="2"><i class="icon icon-download-alt"></i></div><span>INSTALL</span></div>
 				<div class="col-12 col-sm-3"><div class="home-hover navigation-slide" data-slide="4"><i class="icon icon-gift"></i></div><span>FEATURES</span></div>
 				<div class="col-12 col-sm-3"><div class="home-hover navigation-slide" data-slide="8"><i class="icon icon-facetime-video"></i></div><span>VIDEOS</span></div>
-				<div class="col-12 col-sm-3" id="donate_btn">
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="donate_form" style="display: none;">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="5DSCD8Q6YQAJN">
-          </form>
-          <div class="home-hover"><i class="icon icon-money"></i></div><span>DONATE</span>
-        </div>
+				<div class="col-12 col-sm-3"><div class="home-hover navigation-slide" data-slide="7"><i class="icon icon-money"></i></div><span>DONATE</span></div>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide1 -->
@@ -709,6 +703,27 @@
 				</div>
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 			</div><!-- /row -->
+      <div class="row title-row">
+        <div class="col-12 font-light">Donate</div>
+      </div><!-- /row -->
+      <div class="row line-row">
+        <div class="hr">&nbsp;</div>
+      </div><!-- /row -->
+      <div class="row subtitle-row">
+        <div class="col-sm-1 hidden-sm">&nbsp;</div>
+        <div class="col-12 font-light">
+          <div class="donate">
+            <img src="images/wechatpay.jpg" class="wechatpay" title="微信付款"/>
+            <img src="images/zhifubao.png" class="zhifubao" title="支付宝转账"/>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="donate_form">
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="5DSCD8Q6YQAJN">
+              <input type="image" class="paypal" src="images/paypal.png" border="0" name="submit" title="Paypal" id="donate_btn">
+            </form>
+          </div>
+        </div>
+        <div class="col-sm-1 hidden-sm">&nbsp;</div>
+      </div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /Slide 7 -->
 	<!-- === Slide 8 / Contact === -->
