--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<link rel="apple-touch-icon" sizes="72x72" href="images/mih/logo/iPhone-Retina.png"/>
   	<link rel="apple-touch-icon" sizes="144x144" href="images/mih/logo/iPad-Retina.png"/>
 	<meta name="description" content="MIHTool helps Front-End Engineers to debug and optimize their webpages on iPad and iPhone" />
-	<meta name="keywords" content="mobile web debug,remote debug safari,mobile web inspect,mobile html editor,Emulate iPhone,weinre for mobile,firebug for mobile,mobile web user agent">
+	<meta name="keywords" content="debugging,remote debugging,WEb INspector REmote,Mobile DevTools,weinre,Web Inspector for iOS, firebug for iOS">
 	<meta property="og:title" content="">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
