--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
 					<img src="images/mih/logo/iPad-Retina.png" width="80"/>
-					<h1 class="font-semibold">MIHTool <span class="font-thin"><a class="top_version" href="#slide-9" onclick="goToByScroll(9)">7.1</a></span></h1>
+					<h1 class="font-semibold">MIHTool <span class="font-thin"><a class="top_version" href="#slide-9" onclick="goToByScroll(9)">7.2</a></span></h1>
 					<h4 class="font-thin">MIHTool helps Front-End Engineers to  <span class="font-semibold">debug</span> and  <span class="font-semibold">optimize</span> their webpages on iPad and iPhone</h4>
 					<br>
 					<br>
@@ -780,6 +780,26 @@
 				<div class="col-12 font-light left-ajust">
 					<div class="panel-group" id="log_accordion">
             <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#log_accordion" href="#log_v7_2">
+                    V7.2-2017.07.07
+                  </a>
+                </h4>
+              </div>
+              <div id="log_v7_2" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <p>
+                    For iPad <br>
+                    1. +Add, Romote view HTTP trafic.<br>
+                    2. *Fix, Input lose focus.<br>
+                    <br>
+                    For iPhone <br>
+                    1. +Add, Romote view HTTP trafic.<br>
+                  </p>
+                </div>
+              </div>
+            </div>
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#log_accordion" href="#log_v7_1">
