--- a/index.html
+++ b/index.html
@@ -800,6 +800,7 @@
                 </div>
               </div>
             </div>
+            <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#log_accordion" href="#log_v7_1">
