--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<div class="slide story" id="slide-4" data-slide="4">
 		<div class="container">
 			<div class="row title-row">
-				<div class="col-12 font-thin">Featutes</div>
+				<div class="col-12 font-thin">Features</div>
 			</div><!-- /row -->
 			<div class="row line-row">
 				<div class="hr">&nbsp;</div>
