--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div><!-- /.container -->
 	</div><!-- /.navbar -->
 
-  <div class="codelf"><a href="http://unbug.github.io/codelf/" class="re-link">Codelf - Best GitHub stars tagger and organizer</a></div>
+  <div class="notice-links"><a href="https://github.com/unbug/snts" class="re-link">SAY NO TO SUICIDE PUBLIC LICENSE</a></div>
 
 	<!-- === Arrows === -->
 	<div id="arrows">
@@ -83,7 +83,7 @@
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
 					<img src="images/mih/logo/iPad-Retina.png" width="80"/>
-					<h1 class="font-semibold">MIHTool <span class="font-thin"><a class="top_version" href="#slide-9" onclick="goToByScroll(9)">7.3</a></span></h1>
+					<h1 class="font-semibold">MIHTool <span class="font-thin"><a class="top_version" href="#slide-9" onclick="goToByScroll(9)">7.4</a></span></h1>
 					<h4 class="font-thin">MIHTool helps Front-End Engineers to  <span class="font-semibold">debug</span> and  <span class="font-semibold">optimize</span> their webpages on iPad and iPhone</h4>
 					<br>
 					<br>
@@ -785,6 +785,26 @@
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 font-light left-ajust">
 					<div class="panel-group" id="log_accordion">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#log_accordion" href="#log_v7_4">
+                    V7.4-2018.01.12
+                  </a>
+                </h4>
+              </div>
+              <div id="log_v7_4" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <p>
+                    For iPad <br>
+                    1.*Fix, Address bar update when user input. <br>
+                    <br>
+                    For iPhone <br>
+                    1.+Add, Update for iPhone X <br>
+                  </p>
+                </div>
+              </div>
+            </div>
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
